fix button effect z-index

--- a/src/components/attack-button/style.module.scss
+++ b/src/components/attack-button/style.module.scss
@@ -37,6 +37,7 @@
     }
 
     &:before {
+        z-index: 100;
         content: "";
         background-color: #ffffff;
         border-radius: 50%;
